main.scss
:root {
  --color-bg: #212121;
  --color-inverted: #fff;
  
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body, html {
  min-height: 100vh;
}

* {
  margin: 0;
  padding: 0;
}

button {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  touch-action: manipulation;

  background: transparent;

  /* inherit font & color from ancestor */
  color: inherit;
  font: inherit;

  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
  line-height: normal;

  /* Corrects font smoothing for webkit */
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;

  /* Corrects inability to style clickable `input` types in iOS */
  -webkit-appearance: none;
}

html {
  font-size: calc(.75rem + 1.15vh);
  font-family: 'Inter UI', sans-serif;
}

body {
  height: 100vh;
  background: #212121;
  overflow: hidden;
}

.wrap__hasGradients {
  .colors .color {
    &::after {
      opacity: .5;
      content: '';
      position: absolute;
      left: 0;
      right: 0;
      bottom: 0;
      top: 0;
      box-shadow: 0 0 10rem currentColor;
    }
  }
}

.wrap__hasOutlines {
  .pannel {
    border: 2px solid #fff;
  }
  .refresh,
  .settings,
  .copy {
    box-shadow: 0 0 0 2px #fff;
  }
  .colors {
    .color {
      &::before {
        z-index: 10;
        content: '';
        position: absolute;
        top: -2px;
        left: 0;
        bottom: -2px;
        right: 0;
        border: 4px solid #fff;

      }
    }
  }
} 

.wrap,
.bg,
.pannel {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.bg {
  opacity: 0;
  transform: scale(.7);
  transition: 300ms opacity linear, 200ms transform ease-out 50ms;
}

.wrap__hasBackground {
  .bg {
    opacity: 1;
    transform: scale(1);
  }
}

.colors,
.pannel {
  position: absolute;
  left: 50%;
  bottom: 10vmin;
  top: 10vmin;
  display: flex;
  flex-direction: column;

  transform: translateX(-50%);
  width: 52%;

  @media (max-width: 850px) {
    width: 75%;
  }
}

.colors__title {
  display: none;
}

.colors .color {
  position: relative;
  display: flex;

  @media (max-width: 850px) {
    display: block;
    padding: 1rem;
  }

  align-items: center;
  padding: 0 1rem;
  flex-grow: 1;

  /*
  border: solid currentColor;
  border-width: 0 2px;
  */
  transition: 0ms color linear,
              0ms background-color linear,
              250ms padding-bottom cubic-bezier(.7, .3, .3, 1) 100ms;

  
  //@for $i from 1 through 30 {
  // &:nth-child(#{$i}) {
     // transition-delay: #{50 + $i * 50}ms, #{50 + $i * 50}ms, 0ms;
  // }
  //}

  min-height: 0.1vmax;

  &:last-child,
  &:hover {
    padding-bottom: #{1.61803 * 4rem};
  }
}

.colors:hover .color {
  &:last-child {
    padding-bottom: 1rem;
  }

  &:hover {
    padding-bottom: #{1.61803 * 4rem};
  }
}

.color__info {
  display: none;
}


.color__value {
  flex-grow: 1;
  padding-right: 1rem;
  font-size: 0.75em;
  font-family: 'Space Mono', monospace;
  font-style: normal;

  @media (max-width: 850px) {
    font-size: .6em;
    margin-bottom: .15em;
  }
}

.color__name {
  font-size: 1em;
  text-align: right;
  font-weight: 300;
  letter-spacing: -0.02em;

  @media (max-width: 850px) {
    text-align: left;
    font-weight: 400;
  }
}

.buttons {
  position: absolute;
  
  right: 24%;
  bottom: 10vmin;
  display: flex;
  z-index: 20;
  transform: translate(1.1em, 1.1em);
  
  @media (max-width: 850px) {
    right: 12.5%;
  }
}

.botton {
  transform: translateX(0);
  transition: 500ms transform cubic-bezier(0.3, 0.7, 0, 1) 100ms;
  
  @for $i from 1 through 5 {
    &:nth-child(#{$i}) {
      transition-delay: #{50 + $i * 50}ms;
    }
  }
  
}

.wrap__showSettings .botton {
  transform: translateX(13.5vw);
  @for $i from 1 through 5 {
    &:nth-child(#{5 - $i}) {
      transition-delay: #{50 + $i * 50}ms;
    }
  }
  @media (max-width: 850px) {
    transform: translateX(0);
  }
}

.botton {
  position: relative;
  margin: 0;
  padding: 0;
  font-size: 2em;
  width: 1.2em;
  height: 1.2em;
  background: var(--color-last, #212121);
  color: #fff;

  border-radius: 50%;
  outline: 0;
  box-shadow: 0 0 2rem rgba(#000, .2);
  cursor: pointer;

  & + & {
    margin-left: .5rem;
  }
  svg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    animation-name: rotate;
    animation-duration: 3s;
    width: .6em;
    height: .6em;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    animation-play-state: paused;
    line-height: 1;
    fill: #fff;
  }

  &:hover {
    svg {
      animation-play-state: running;
    }
  }
}

.settings {
  svg {
    animation: none;
    width: .5em;    
    height: .5em;
  }
  &::after {
    content: '×';
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -.075em;
    transform: translate(-50%, -50%) scale(.2);
    opacity: 0;
  }
}

.wrap__showSettings .settings {
  &::after {
    opacity: 1;
    transition: 100ms opacity linear 50ms,
      300ms transform cubic-bezier(.3, 0, .7, 1.8);
    transform: translate(-50%, -50%) scale(.75);
  }

  svg {
    transition: 100ms opacity linear;
    opacity: 0;
  }
}

.copy {
  svg {
    animation: none;
    width: .6em;
    height: .6em;
    stroke: #fff;
    stroke-width: 1px;
    margin-top: -.01em;
  }

  &::after {
    content: '✓';
    position: absolute;
    top: 50%;
    left: 50%;
    opacity: 0;
    transform: translate(-50%, -50%) scale(0.2);
  }

  &:focus {
    &::after {
      opacity: 1;
      transition: 100ms opacity linear 50ms,
                  300ms transform cubic-bezier(.3, 0, .7, 1.8);
      transform: translate(-50%, -50%) scale(.75);
    }
    svg {
      transition: 100ms opacity linear;
      opacity: 0;
    }
  }
}

.pannel {
  pointer-events: none;
  box-sizing: border-box;
  padding: 1rem;
  padding-right: calc(25% + 1rem); 
  background: var(--color-bg);
  //backdrop-filter: blur(5px);

  display: block;
  cursor: default;
  
  color: #fff;

  transform: translateX(-50%) scale(.95);
  
  @media (max-width: 850px) {
    padding-right: 1rem; 
  }

  &__setting {
    display: block;

    & + & {
      margin-top: 1.7rem;
    }

    &--inline {
      display: flex;
      align-items: center;
      .pannel__settingtitle {
        margin-left: .5rem;
      }
    }
  }
  select {
    font-size: .8em;
    border-radius: 2rem;
    padding: .2rem;
  }
  input, select {
    display: block;
    box-sizing: border-box;
    touch-action: manipulation;
    font-family: 'Space Mono', monospace;

    &[type=number] {
      color: #fff;
      background: none;
      border: none;
      text-align: right;
      font-size: .8em;
      flex: 0 0 3rem;
      width: 3rem;
    }
  }
  input {
    background-color: transparent;
  }

  /* Chrome, Safari, Edge, Opera */
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  input[type=number] {
    -moz-appearance: textfield;
  }

  input[type=range],
  input[type=color] {
    -webkit-appearance: none;
  }

  // range sliders
  input[type=range] {
    margin: 0;
  }

  input[type=range]:focus {
    outline: none;

    &::-webkit-slider-thumb {
      //height: .65rem;
      background-color: #fff;
      clip-path: polygon(100% 0%, 0% 0%, 50% 100%, 50% 100%);
      //clip-path: polygon(50% 0%, 50% 0%, 0% 100%, 100% 100%);
    }
  }

  @mixin slider-track {
    width: 100%;
    height: 1rem;
    cursor: pointer;
    animate: 0.2s;
    background: transparent;
    color: var(--c-black);
    border-radius: 0;
    border: solid #fff;
    border-width: 0 0 1px;
  }

  @mixin slider-thumb {
    border: 2px solid transparent;
    height: .75rem;
    width: .5rem;
    border-radius: 0;
    background: #fff;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: 0.25rem;
    transition: 150ms background-color, 200ms clip-path, 200ms -webkit-clip-path;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
  }

  input[type=range]::-webkit-slider-runnable-track {
    @include slider-track;
  }

  input[type=range]::-webkit-slider-thumb {
    @include slider-thumb;
  }

  input[type=range]:focus::-webkit-slider-runnable-track {
    //background: $c-black;
  }

  input[type=range]::-moz-range-track {
    @include slider-track;
  }

  input[type=range]::-moz-range-thumb {
    @include slider-thumb;
  }

  input[type=range]::-ms-track {
    @include slider-track;
  }

  input[type=range]::-ms-fill-lower {
    background: #fff;
    border: none;
    border-radius: 100%;
  }

  input[type=range]::-ms-fill-upper {
    background: #fff;
    border-radius: 100%;
    box-shadow: none;
  }

  input[type=range]::-ms-thumb {
    @include slider-thumb;
  }

  input[type=range]:focus::-ms-fill-lower {
    //background: $c-black;
  }

  input[type=range]:focus::-ms-fill-upper {
    //background: $c-black;
  }

  select {
    color: #fff;
    width: 100%;
    box-sizing: border-box;
    -webkit-appearance: none;
    border: 0;
    box-shadow: 0 1px 0 0 #fff;
    border-radius: 0;
    padding: 0.25rem 1rem 0.25rem 0rem;
    background-color: transparent;

    &:focus {
      outline: none;
      background-color: transparent;
    }
  }
}

.colors,
.pannel {
  transition: 400ms transform cubic-bezier(0.3, 0.7, 0, 1);
}

.wrap__hasBackground .pannel {
  box-shadow: none;
}
.pannel {
  box-shadow: inset 0 0 0 1px #fff;
  overflow: auto;
  @media (max-width: 850px) {
    opacity: 0;
    z-index: 5;
    transform: translateX(-50%) scale(.8);
  }
}

.wrap__showSettings .pannel {
  pointer-events: all;
  transform: translateX(-75%);

  @media (max-width: 850px) {
    transform: translateX(-50%);
    opacity: 1;
  }
}

.wrap__showSettings .colors {
  transform: translateX(-25%);

  @media (max-width: 850px) {
    transform: translateX(-50%);
  }
}

.pannel__settingtitle {
  font-size: 0.7rem;
  font-weight: normal;
  line-height: 1;
  margin-bottom: .4em;
}

.pannel__inputs,
.pannel__settingtitle {
  display: flex;
  > *:first-child {
    flex: 1 0 auto;
  }
}

@keyframes rotate {
  from {
    transform: translate(-50%, -50%) rotate(0deg);
  }

  to {
    transform: translate(-50%, -50%) rotate(360deg);
  }
}

.ellogo {
  margin: 2rem auto 1rem;
  display: block;
  position: relative;
  width: 40%;
  box-sizing: border-box;

  svg {
    display: block;
    height: 100%;
    width: 100%;
    overflow: visible;


    path:nth-child(2) {
      fill: none;
    }
  }

  &:hover {
    path:nth-child(2) {
      stroke: var(--color-inverted);
    }
  }
}

.footer {
  h2 {
    font-weight: 900;
  }

  font-size: .7em;
  margin-top: 2rem;
  padding-top: 1rem;
  line-height: 1.4;
  
  p {
    margin-top: 1em;
    margin-bottom: 2em;
  }

  ol, ul, li {
    list-style: none;
  }

  li + li{
    margin-top: 1em;
  }

  ul, ol {
    margin-top: 1em;
  }

  a {
    color: #fff;
  }
}

.title {
  font-weight: 900;
  color: #fff;
  font-size: 1rem;
  margin-bottom: 1em;
}

